asset/Deployment/K8/vsphere7/03-totfe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titofe
  labels:
    name: tito-fe
    app: tito
    tier: frontend
    stage: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tito
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tito
    spec:
      containers:
        - name: tito-fe
          image: toddbvirtual/tito-fe
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
