asset/Deployment/K8/vsphere7/tito-fe-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tito-dev
  namespace: tito
#  annotations:
#    ncp/rewrite_target: "/"
  labels:
    app: tito
    stage: dev
spec:
  rules:
   - host: tito-toddb.livefire.lab #set your ingress URL here
     http:
       paths:
       - path: /tito/*
         backend:
           serviceName: titofe-service
           servicePort: 80
